--- a/outils/bouliers/rekenrek/ajouter9_ajouter8.html
+++ b/outils/bouliers/rekenrek/ajouter9_ajouter8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Enlever 9, enlever 10</title>
+<title>Ajouter 9, ajouter 10</title>
 <style>
   :root {
     --bg: #1a1a1a; 
