--- a/outils/bouliers/boulier_montessori/index.html
+++ b/outils/bouliers/boulier_montessori/index.html
@@ -9,6 +9,10 @@
 <main><div class="wrapper">
 <section class="grid" style="grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:18px">
   <div class="card center">
+    <h3>Transition Rekenrek</h3>
+    <p><a class="btn-chip" href="transition_rekenrek-montessori.html">Ouvrir</a></p>
+  </div>
+  <div class="card center">
     <h3>Boulier</h3>
     <p><a class="btn-chip" href="boulier-cycle3-petit.html">Ouvrir</a></p>
   </div>
