--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -243,7 +243,7 @@
     <h2 class="section-title">✖️ Doubles & Multiplication</h2>
     <section class="grid cat-mult">
         <a href="jeu_des_doubles.html" class="card-link">
-            <div class="icon-box">🍒</div>
+            <div class="icon-box">✌️</div>
             <h3>Jeu des doubles</h3>
             <p>Mémoriser les doubles (1+1, 2+2...).</p>
         </a>
