--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -145,7 +145,7 @@
         </nav>
         <div class="header-title">
             <h1>Atelier Rekenrek</h1>
-            <p>Concret • Pictural • Abstract</p>
+            <p>Concret • Pictural • Abstrait</p>
         </div>
     </div>
 </header>
