--- a/outils/bouliers/boulier_montessori/boulier-cycle3-petit.html
+++ b/outils/bouliers/boulier_montessori/boulier-cycle3-petit.html
@@ -252,7 +252,7 @@
         <button class="btn active" id="btnColor" title="Couleurs">🎨</button>
         <button class="btn active" id="btnGroup" title="Groupes">⬜</button>
         <button class="btn" id="btnMarker" title="Repère visuel (5)">⚫</button>
-        <button class="btn" id="btnLabels" title="Valeurs Billes">100</button>
+        <button class="btn" id="btnLabels" title="Valeurs Billes">Valeurs</button>
       </div>
       <div class="separator"></div>
       
@@ -792,3 +792,4 @@
 </script>
 </body>
 </html>
+
