--- a/outils/bouliers/boulier_montessori/boulier-cycle3-petit-placer-nombres.html
+++ b/outils/bouliers/boulier_montessori/boulier-cycle3-petit-placer-nombres.html
@@ -281,7 +281,7 @@
 
       <!-- Groupe 2: Valeur (Toggle) -->
       <div class="control-group">
-        <button class="btn toggle" id="btnLabels" title="Afficher la valeur dans les billes">Valeur</button>
+        <button class="btn toggle" id="btnLabels" title="Afficher la valeur dans les billes">Valeurs</button>
       </div>
 
       <div class="separator"></div>
@@ -691,3 +691,4 @@
 </script>
 </body>
 </html>
+
