--- a/outils/bouliers/boulier_montessori/boulier-cycle3-petit-placer-nombres.html
+++ b/outils/bouliers/boulier_montessori/boulier-cycle3-petit-placer-nombres.html
@@ -277,14 +277,10 @@
         <button class="btn toggle" id="btnMarker" title="Afficher/Masquer Repère visuel (5)">⚫</button>
       </div>
 
-      <div class="separator"></div>
-
-      <!-- Groupe 2: Valeur (Toggle) -->
+       !-- Groupe 2: Valeur (Toggle) -->
       <div class="control-group">
         <button class="btn toggle" id="btnLabels" title="Afficher la valeur dans les billes">Valeurs</button>
       </div>
-
-      <div class="separator"></div>
 
       <!-- Groupe 3: Actions + Score -->
       <div class="control-group">
@@ -691,4 +687,5 @@
 </script>
 </body>
 </html>
+
 
