--- a/outils/index.html
+++ b/outils/index.html
@@ -122,6 +122,11 @@
   <p class="desc">Générateur de diagrammes partie-tout avec problèmes (énoncés + schémas).</p>
 </a>
 
+      <a class="card" href="relatifs/" data-color="2">
+        <div class="title">🔴🟢 Relatifs</div>
+        <p class="desc">Manipulations et outils autour des nombres relatifs.</p>
+      </a>
+
     </section>
     
   </main>
