--- a/outils/relatifs/index.html
+++ b/outils/relatifs/index.html
@@ -187,7 +187,7 @@
         <div class="choice-grid">
             
             <!-- Lien vers le fichier spécifié -->
-            <a href="nombres_relatifs_somme_différence.html" class="choice-card theme-relatifs">
+            <a href="nombres_relatifs_somme_difference.html" class="choice-card theme-relatifs">
                 <div class="icon-wrapper">
                     <!-- Icone Plus -->
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
