--- a/outils/index.html
+++ b/outils/index.html
@@ -82,9 +82,11 @@
     </header>
 
     <section class="grid">
-      <a class="card" href="cartes_premiers_1_100.html" data-color="7">
-        <div class="title">🃏 Générateur de Cartes</div>
-        <p class="desc">Nombres premiers, composés, diviseurs, etc. (1-100 ou plus).</p>
+      
+      <!-- Nouveau dossier regroupant les outils de fabrication -->
+      <a class="card" href="fabrication/" data-color="7">
+        <div class="title">✂️ Fabrication de matériel</div>
+        <p class="desc">Outils pour générer du matériel à manipuler (imprimer, couper, coller, plastifier).</p>
       </a>
 
       <a class="card" href="glisse-nombres-decimaux.html" data-color="1">
@@ -106,21 +108,11 @@
         <div class="title">🧮 Bouliers</div>
         <p class="desc">Ateliers et activités autour du boulier.</p>
       </a>
-
-      <a class="card" href="bandes_maker_v2.html" data-color="5">
-        <div class="title">📏 Bandes maker</div>
-        <p class="desc">Générateur de bandes (fractions)</p>
-      </a>
-
-      <a class="card" href="disque_maker.html" data-color="6">
-        <div class="title">⭕️ Disques maker</div>
-        <p class="desc">Générateur de disques (fractions) </p>
-      </a>
       
       <a class="card" href="sheet_generator_diagramme_partie_tout.html" data-color="1">
-  <div class="title">🧩 Diagrammes partie-tout</div>
-  <p class="desc">Générateur de diagrammes partie-tout avec problèmes (énoncés + schémas).</p>
-</a>
+        <div class="title">🧩 Diagrammes partie-tout</div>
+        <p class="desc">Générateur de diagrammes partie-tout avec problèmes (énoncés + schémas).</p>
+      </a>
 
       <a class="card" href="relatifs/" data-color="2">
         <div class="title">🔴🟢 Relatifs</div>
