--- a/outils/index.html
+++ b/outils/index.html
@@ -84,7 +84,7 @@
     <section class="grid">
       
       <!-- Nouveau dossier regroupant les outils de fabrication -->
-      <a class="card" href="fabrication/" data-color="7">
+      <a class="card" href="fabrication_materiel/" data-color="7">
         <div class="title">✂️ Fabrication de matériel</div>
         <p class="desc">Outils pour générer du matériel à manipuler (imprimer, couper, coller, plastifier).</p>
       </a>
